k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: processing-platform
  labels:
    name: processing-platform
