k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: processing-platform
  labels:
    app: worker
spec:
  # Starts at 0 replicas. KEDA will scale it dynamically from 0 -> N -> 0!
  replicas: 0
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: worker-sa
      terminationGracePeriodSeconds: 60  # Allows active tasks to complete within 60s when scaling down
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: worker
          image: ghcr.io/melvinjosec/cloud-native-processing-platform-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          livenessProbe:
            exec:
              command:
                - pgrep
                - -f
                - main.py
            initialDelaySeconds: 10
            periodSeconds: 15
