k8s/base/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: processing-platform
  labels:
    app: producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: producer-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: producer
          image: ghcr.io/melvinjosec/cloud-native-processing-platform-producer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            failureThreshold: 10
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            periodSeconds: 5
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: processing-platform
  labels:
    app: producer
spec:
  ports:
    - port: 80
      targetPort: 8000
      name: http
  selector:
    app: producer
